MB-58543: getVBucketHlcNow needs a nullptr check on getKVBucket

Add a nullptr check in getVBucketHlcNow and if null, return nullopt.
This case occurs during start-up from inside the construction of
KVBucket itself, and before EventuallyPersistentEngine has assigned
the pointer (kvBucket).

Change-Id: I059c8744bade7c213a4b1e2acad5418bb89f4d78
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/196775
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>
Tested-by: Jim Walker <jim@couchbase.com>